--- a/war/src/main/less/modules/dropdowns.less
+++ b/war/src/main/less/modules/dropdowns.less
@@ -1,8 +1,8 @@
 .tippy-box[data-theme~='popover'] {
-  background: var(--popover-background);
+  background: var(--dropdown-background);
   padding: 0.45rem;
   border-radius: 15px;
-  box-shadow: var(--popover-shadow);
+  box-shadow: var(--dropdown-box-shadow);
   outline: none !important;
   backdrop-filter: saturate(2) blur(20px);
   max-width: unset !important;
@@ -37,7 +37,7 @@
 
 .jenkins-popover {
   &__header {
-    color: var(--popover-foreground) !important;
+    color: var(--dropdown-color) !important;
     margin: 0;
     padding: 0.55rem 3rem 0.55rem 0.7rem;
     font-weight: 600 !important;
@@ -55,7 +55,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background-color: var(--popover-foreground);
+      background-color: var(--dropdown-color);
       border-radius: 2px;
       opacity: 0.05;
     }
@@ -65,7 +65,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    color: var(--popover-foreground) !important;
+    color: var(--dropdown-color) !important;
     border-radius: 6px;
     text-decoration: none !important;
     transition: var(--standard-transition);
@@ -81,6 +81,7 @@
     border: none;
     width: 100%;
     white-space: nowrap;
+    gap: 0.6rem;
 
     &:not(:last-of-type) {
       margin-bottom: 0.2rem;
@@ -136,13 +137,12 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 18px;
-      height: 18px;
-      margin-right: 1.5ch;
+      width: 1.2rem;
+      height: 1.2rem;
 
       svg, img {
-        width: 100%;
-        height: 100%;
+        width: 100% !important;
+        height: 100% !important;
       }
     }
 
@@ -151,7 +151,7 @@
       top: 0;
       right: 5px;
       bottom: 0;
-      background: var(--popover-foreground);
+      background: var(--dropdown-color);
       width: 16px;
       mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'%3E%3Ctitle%3EChevron Forward%3C/title%3E%3Cpath fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='48' d='M184 112l144 144-144 144'/%3E%3C/svg%3E");
       mask-size: contain;
@@ -160,10 +160,4 @@
       opacity: 0.4;
     }
   }
-
-  color: var(--tooltip-foreground-color);
-  font-size: 0.8rem;
-  z-index: 1001 !important;
-  overflow: hidden;
-  max-width: none !important;
 }
